# All #includes in test programs have to be #include <morph/header.h>
include_directories(BEFORE ${PROJECT_SOURCE_DIR})

if(HDF5_FOUND AND ARMADILLO_FOUND)
  add_executable(schnakenberg schnakenberg.cpp)
  target_compile_definitions(schnakenberg PUBLIC FLT=float COMPILE_PLOTTING)
  if(APPLE AND OpenMP_CXX_FOUND)
    target_link_libraries(schnakenberg OpenMP::OpenMP_CXX ${ARMADILLO_LIBRARY} ${ARMADILLO_LIBRARIES} OpenGL::GL glfw Freetype::Freetype ${HDF5_C_LIBRARIES})
  else()
    target_link_libraries(schnakenberg ${ARMADILLO_LIBRARY} ${ARMADILLO_LIBRARIES} OpenGL::GL glfw Freetype::Freetype ${HDF5_C_LIBRARIES})
  endif()
  if(USE_GLEW)
    target_link_libraries(schnakenberg GLEW::GLEW)
  endif()

  add_executable(schnak_whisk schnak_whisk.cpp)
  target_compile_definitions(schnak_whisk PUBLIC FLT=float COMPILE_PLOTTING)
  if(APPLE AND OpenMP_CXX_FOUND)
    target_link_libraries(schnak_whisk OpenMP::OpenMP_CXX ${ARMADILLO_LIBRARY} ${ARMADILLO_LIBRARIES} OpenGL::GL glfw Freetype::Freetype ${HDF5_C_LIBRARIES})
  else()
    target_link_libraries(schnak_whisk ${ARMADILLO_LIBRARY} ${ARMADILLO_LIBRARIES} OpenGL::GL glfw Freetype::Freetype ${HDF5_C_LIBRARIES})
  endif()
  if(USE_GLEW)
    target_link_libraries(schnak_whisk GLEW::GLEW)
  endif()
endif()
